--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
         im the first one
+        hey
       </div>
     </div>
   </div>
